--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(revanth.jpeg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://github.com/Sravrev7">Sravan Revanth Garaga</a></h1>
+                  <h1 id="colorlib-logo"><a href="</a></h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
